--- a/data/spine.yaml
+++ b/data/spine.yaml
@@ -1,6 +1,6 @@
-# Please insure that your custom_dataset are put in same parent dir with SPINE_DIAGNOSE_DIR
-train: /home/marcus/Learn/DL/YOLOv6/data/detect/images/train # train images
-val: /home/marcus/Learn/DL/YOLOv6/data/detect/images/val # val images
+# Please replce the detect data folder to yours
+train: /home/marcus/Learn/DL/Spine_diagnose_data/images/train # train images
+val: /home/marcus/Learn/DL/Spine_diagnose_data/images/val # val images
 # test: ../custom_dataset/images/test # test images (optional)
 
 # whether it is coco dataset, only coco dataset should be set to True.
