--- a/data/spine.yaml
+++ b/data/spine.yaml
@@ -14,7 +14,7 @@ names: ['L1', 'L2', 'L3' ,'L4', 'L5', 'T12-L1', 'L1-L2', 'L2-L3', 'L3-L4', 'L4-L
 ctrain1: /home/marcus/Learn/DL/Spine_diagnose/tools/datasets/classify/train/classA
 cval1: /home/marcus/Learn/DL/Spine_diagnose/tools/datasets/classify/val/classA
 
-ctrain2: /home/marcus/Learn/DL/Spine_diagnose/tools/datasets/classify/train/classA
+ctrain2: /home/marcus/Learn/DL/Spine_diagnose/tools/datasets/classify/train/classB
 cval2: /home/marcus/Learn/DL/Spine_diagnose/tools/datasets/classify/val/classB
 # disease Classes
 dnc1: 3
@@ -25,4 +25,5 @@ dnames2: ['v1', 'v2', 'v3', 'v4', 'v5', 'None']
 
 # model type
 detect: 'yolov6s'
-classify: 'resnet50'
+classify1: 'resnet50'
+classify2: 'resnest50'
